# collari

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker.yml
rest-server/: Cargo.toml  Dockerfile
rest-server/src/: main.rs
rest-server/src/api/: mod.rs
rest-server/src/api/v1/: mod.rs
rest-server/src/api/v1/auth/: get.rs  mod.rs  post.rs
rest-server/src/api/v1/oauth/: get.rs  mod.rs  post.rs
rest-server/src/app/: mod.rs  oauth.rs
rest-server/src/json/: auth.rs  mod.rs
rest-server/src/oauth/: mod.rs
website/: package-lock.json  package.json  tailwind.config.mjs
website/src/components/: About.astro  Divider.astro  Fade.svelte  Footer.astro  Header.astro  Hero.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/scripts/: initAOS.js
website/src/styles/: divider.css  footer.css  global.css  header.css  hero.css  index.css  layout.css
