[workspace]
members = [
    "rest-server"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.213", default-features = false, features = ["derive"] }
env_logger = { version = "0.11.5" }
dotenv = { version = "0.15.0" }
log = { version = "0.4.22" }